CHANGELOG

2.0.41
UTILS:
* UTIL type=address-/service-merger | export also skipped objects
* UTIL type=address actions=exportToExcel:FILE.html,resolveIP - improvement for dynamic AddressGroup

BUGFIX;

GENERAL:


2.0.40 (20220509)
UTILS:
* UTIL type=playbook | introduce argument validation
* class AddressGroup - dynamic Address Group with filter; every kind of filter is supported - revert warning
* class AddressGroup/ServiceGroup/pan_php_framework - improvement for stdout
* UTIL type=service-merger | improvement to stdout - why an object is skipped {protocol/dport/sport}
* UTIL type=service | improvements to validate loop usage in ServiceGroup

BUGFIX:
* UTIL type=tag | bugfix to support correctly tag name with characters '(' and ')'  - benefit for dynamic address group filter
* UTIL type=playbook | bugfix regarding supported arguments
* class PanoramaConf | bugfix for reading custom region objects on shared level
* class PANConf | bugfix for argument loadpanoramapushedconfig
* UTIL type=device actions=display-shadowrule - bugfix for none declared variable
* UTIL type=device | actions=display-shadowrule - bugfix to display rule owner
* UTIL type=device actions=display-shadowrule - bugfix
* UTIL ServiceStore | bugfix if serviceGroup A has a ServiceGroup B as member, which contains ServiceGroupA

GENERAL:


2.0.39 (20220428)
UTILS:
* UTIL type=html-merger | optimisation
* UTIL type=address | introduce actions=create-address-from-file:FILE.txt
* UTIL type=rule | introduce actions=src-add-from-file:FILE.txt / dst-add-from-file:FILE.txt
* UTIL type=address | introduce new 'filter=(value ip4.match.exact.from.file FILE)
* UTIL type=address | improve actions=replace-IP-by-MT-like-Object/create-address/create-address-from-file - related to easily create address object which same name as TMP object
* UTIL type=address-/service-/tag-merger | optimisation if argument allowmergingwithupperlevel is used
* UTIL type=address-merger | introduce actions=mergenoghost

BUGFIX: