@@ -109,13 +109,17 @@ class PLAYBOOK__
         if( isset(PH::$args['outputformatset']) )
         {
             $this->outputformatset = TRUE;
-            $this->outputformatsetFile = PH::$args['outputformatset'];
 
-            if( $this->projectFolder !== null )
-                $this->outputformatsetFile = $this->projectFolder."/".$this->outputformatsetFile;
+            if( !is_bool(PH::$args['outputformatset']) )
+            {
+                $this->outputformatsetFile = PH::$args['outputformatset'];
 
-            if( $this->outputformatsetFile !== null )
-                file_put_contents($this->outputformatsetFile, "" );
+                if( $this->projectFolder !== null )
+                    $this->outputformatsetFile = $this->projectFolder."/".$this->outputformatsetFile;
+
+                if( $this->outputformatsetFile !== null )
+                    file_put_contents($this->outputformatsetFile, "" );
+            }
         }
 
 
